@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                             http://www.tuxpaint.org/
 
-                                 June 27, 2007
+                                  July 4, 2007
 
    --------------------------------------------------------------------------
 
@@ -539,6 +539,8 @@ Windows Users
                |--------------------+---------------------+---------------|
                |welsh               |cymraeg              |               |
                |--------------------+---------------------+---------------|
+               |wolof               |                     |               |
+               |--------------------+---------------------+---------------|
                |xhosa               |                     |               |
                +----------------------------------------------------------+
 
@@ -857,6 +859,8 @@ Available Languages
        |vi_VN    |                     |Vietnamese       |                  |
        |---------+---------------------+-----------------+------------------|
        |wa_BE    |                     |Walloon          |                  |
+       |---------+---------------------+-----------------+------------------|
+       |wo_SN    |                     |Wolof            |                  |
        |---------+---------------------+-----------------+------------------|
        |xh_ZA    |                     |Xhosa            |                  |
        |---------+---------------------+-----------------+------------------|
