@@ -23,7 +23,7 @@ New Breed Software</p>
 <a href="http://www.tuxpaint.org/">http://www.tuxpaint.org/</a></p>
 
 
-<p>June 27, 2007</p>
+<p>July 4, 2007</p>
 
 
 </center>
@@ -848,6 +848,11 @@ New Breed Software</p>
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td><code>wolof</code></td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
       <td><code>xhosa</code></td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
@@ -1491,6 +1496,12 @@ New Breed Software</p>
     <td><code>wa_BE</code></td>
     <td>&nbsp;</td>
     <td>Walloon</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td><code>wo_SN</code></td>
+    <td>&nbsp;</td>
+    <td>Wolof</td>
     <td>&nbsp;</td>
   </tr>
   <tr>
