@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2007.07.01
-.TH TUXPAINT 1 "1 July 2007" "0.9.17" "Tux Paint"
+.\" tuxpaint.1 - 2007.07.04
+.TH TUXPAINT 1 "4 July 2007" "0.9.18" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -531,6 +531,9 @@ walloon
 .TP 2
 -
 welsh | cymraeg
+.TP 2
+-
+wolof
 .TP 2
 -
 xhosa
